syntax = "proto3";

message LevelDBObject{
  string key = 1;
  repeated string content = 2;
}

service LevelDBService{
  rpc get (string) returns (LevelDBObject){}
  rpc put (LevelDBObject) returns (bool){}
  rpc putChild (LevelDBObject) returns (bool){}
  rpc del (LevelDBObject) returns (bool){}
  rpc delChild (LevelDBObject) returns (bool){}
}